--- a/python_flask_docker/Dockerfile
+++ b/python_flask_docker/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.8-alpine
 
 # Copy the requirements file into the image
-COPY ./python_flask_docker/requirements.txt /app/requirements.txt
+COPY ./requirements.txt /app/requirements.txt
 
 # Switch working directory
 WORKDIR /app
@@ -11,7 +11,7 @@ WORKDIR /app
 RUN pip install -r requirements.txt
 
 # Copy every content from the local file to the image
-COPY ./python_flask_docker /app
+COPY . /app
 
-# Run flask_sample_web_app.py when the container launches
+# Run flask_web_app.py when the container launches
 CMD "python3 flask_web_app.py"
