Push python_flask_docker image into DockerHub

--- a/python_flask_docker/Dockerfile
+++ b/python_flask_docker/Dockerfile
@@ -13,6 +13,9 @@ RUN pip install -r requirements.txt
 # Copy every content from the local file to the image
 COPY . /app
 
+# Define environment variable to check if the code runs from a docker container
+ENV AM_I_IN_A_DOCKER_CONTAINER Yes
+
 # Run flask_web_app.py when the container launches
 ENTRYPOINT ["python"]
 CMD ["flask_web_app.py"]
